2014-01-04  tino

	* [r9568] ChangeLog, scripts/cg3-autobin.pl,
	  src/NicelineApplicator.cpp, src/cg_conv.cpp, src/version.hpp,
	  update-revision.pl: cg-conv now handles less clean Niceline input
	* [r9567] manual/manual.xml, src/ApertiumApplicator.cpp,
	  src/ApertiumApplicator.hpp, src/BinaryGrammar.cpp,
	  src/BinaryGrammar.hpp, src/BinaryGrammar_read.cpp,
	  src/BinaryGrammar_write.cpp, src/Cohort.cpp, src/Cohort.hpp,
	  src/CohortIterator.cpp, src/CohortIterator.hpp,
	  src/CompositeTag.cpp, src/CompositeTag.hpp,
	  src/ContextualTest.cpp, src/ContextualTest.hpp,
	  src/FSTApplicator.cpp, src/FSTApplicator.hpp,
	  src/FormatConverter.cpp, src/FormatConverter.hpp,
	  src/Grammar.cpp, src/Grammar.hpp, src/GrammarApplicator.cpp,
	  src/GrammarApplicator.hpp, src/GrammarApplicator_matchSet.cpp,
	  src/GrammarApplicator_reflow.cpp,
	  src/GrammarApplicator_runContextualTest.cpp,
	  src/GrammarApplicator_runGrammar.cpp,
	  src/GrammarApplicator_runRules.cpp, src/GrammarWriter.cpp,
	  src/GrammarWriter.hpp, src/IGrammarParser.hpp,
	  src/MatxinApplicator.cpp, src/MatxinApplicator.hpp,
	  src/NicelineApplicator.cpp, src/NicelineApplicator.hpp,
	  src/PlaintextApplicator.cpp, src/PlaintextApplicator.hpp,
	  src/Reading.cpp, src/Reading.hpp, src/Rule.cpp, src/Rule.hpp,
	  src/Set.cpp, src/Set.hpp, src/SingleWindow.cpp,
	  src/SingleWindow.hpp, src/Strings.cpp, src/Strings.hpp,
	  src/Tag.cpp, src/Tag.hpp, src/TextualParser.cpp,
	  src/TextualParser.hpp, src/Window.cpp, src/Window.hpp,
	  src/bloomish.hpp, src/cg3.h, src/cg_comp.cpp, src/cg_conv.cpp,
	  src/cg_proc.cpp, src/inlines.hpp, src/interval_vector.hpp,
	  src/istream.hpp, src/libcg3.cpp, src/macros.hpp, src/main.cpp,
	  src/options.hpp, src/options_conv.hpp, src/sorted_vector.hpp,
	  src/stdafx.hpp, src/test_libcg3.c, src/uextras.cpp,
	  src/uextras.hpp, src/version.hpp: Yearly copyright refresh

2013-12-30  tino

	* [r9528] ChangeLog, scripts/cg3-autobin.pl,