@@ -30,7 +30,7 @@ const char* const CG3_COPYRIGHT_STRING = "Copyright (C) 2007-2014 GrammarSoft Ap
 const uint32_t CG3_VERSION_MAJOR = 0;
 const uint32_t CG3_VERSION_MINOR = 9;
 const uint32_t CG3_VERSION_PATCH = 8;
-const uint32_t CG3_REVISION = 9570;
+const uint32_t CG3_REVISION = 9588;
 const uint32_t CG3_TOO_OLD = 9248;
 const uint32_t CG3_EXTERNAL_PROTOCOL = 7226;
 
